--- a/css/styles.css
+++ b/css/styles.css
@@ -887,6 +887,8 @@ Blog
 }
 .my-image {
   height: 220px;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .card-footer {
   display: grid;
